--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Font 1 -->
 <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:wght@479;500&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 
 
 </head>
