--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montserrat:wght@479;500&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="style.css">
-
+<meta name="google-site-verification" content="hUSYCnqBJ_qnSrJ7EOm167UOtGmJEJ00iMmgW7wtTpY" />
 
 </head>
 <body>
