--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About NarrowColor</title>
+<title>Disclaimer</title>
 <meta name="title" content="NarrowColor - Explore a World of Colors"/>
 <meta name="description" content="NarrowColor helps you to generate or choose best color combinations for your designs."/>
 <meta name="keywords" content="color,color palette, designs, user interface, palette, color scheme, NarrowColor, colorhunt,artists tool"/>
