--- a/index.html
+++ b/index.html
@@ -301,5 +301,20 @@
 </footer>
 
 <script src="script.js"></script>
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "CreativeWork",
+  "name": "NarrowColor - Explore a World of Colors",
+  "description": "NarrowColor helps you to generate or choose best color combinations for your designs.",
+  "author": {
+    "@type": "Person",
+    "name": "Ganesh Kumar"
+  },
+  "dateCreated": "2022-05-01",
+  "keywords": "color, palette, designs, NarrowColor, arts, creativity"
+}
+</script>
 </body>
 </html>
